
==== New classes ====

==== API changes ====
 * Removed deprecated specific RandomVector constructors
 * Removed deprecated HypothesisTest::Smirnov
 * Removed deprecated FittingTest::TwoSamplesKolmogorov
 * Removed deprecated LinearModel, LinearModelFactory
 * Removed deprecated HypothesisTest::(Partial|Full)Regression
 * Removed deprecated OptimizationProblem(levelFunction, levelValue) ctor

=== Python module ===

=== Miscellaneous ===

=== Bug fixes ===
 * https://github.com/openturns/openturns/milestone/4?closed=1


== 1.13rc1 release (2019-04-26) == #release-1.13rc1

=== Library ===

==== Major changes ====
 * Added OPT++ solvers
 * Improved a lot the performace of all the Rosenblatt related computations
 * Added elementary calibration capabilities
 * Added CMinpack, Ceres Solver least-squares solvers

==== New classes ====
 * ParametricPointToFieldFunction
 * LinearModelResult, LinearModelAlgorithm, LinearModelAnalysis
 * OPTpp
 * NearestPointProblem, LeastSquaresProblem
 * CMinpack
 * Ceres
 * DiscreteMarkovChain
 * CalibrationAlgorithm, CalibrationResult, BLUE, LinearLeastSquaresCalibration
 * NonLinearLeastSquaresCalibration, ThreeDVAR
 * Hypergeometric

==== API changes ====
 * Removed deprecated FunctionalChaosRandomVector::getSobol* methods
 * Removed deprecated UserDefinedCovarianceModel constructor based on a Collection<CovarianceMatrix>
 * Removed deprecated FieldFunction,FieldToPointFunction::getSpatialDimension
 * Removed deprecated LinearModelRSquared, LinearModelAdjustedRSquared
 * Deprecated LinearModel, LinearModelFactory
 * Moved HypothesisTest::(Partial|Full)Regression to LinearModelTest
 * Deprecated OptimizationProblem(levelFunction, levelValue)
 * Deprecated (Linear|Quadratic)(LeastSquares|Taylor)::getResponseSurface
 * FittingTest::BestModelBIC returns the Distribution and the BIC value
 * Deprecated VisualTest::DrawEmpiricalCDF,DrawHistogram,DrawClouds
 * Add statistic attribute and accessor to the TestResult class

=== Python module ===