@@ -1,2 +1,1 @@
-Remove deprecated (Linear|Quadratic)(LeastSquares|Taylor)::getResponseSurface
 Remove deprecated VisualTest::DrawEmpiricalCDF,DrawHistogram,DrawClouds
