@@ -223,13 +223,6 @@ Function QuadraticLeastSquares::getMetaModel() const
   return responseSurface_;
 }
 
-Function QuadraticLeastSquares::getResponseSurface() const
-{
-  LOGWARN(OSS() << "getResponseSurface is deprecated, use getMetaModel");
-  return responseSurface_;
-}
-
-
 void QuadraticLeastSquares::save(Advocate & adv) const
 {
   PersistentObject::save(adv);
